# server

./: .gitmodules  README.md  example.env
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
crates/db/: Cargo.toml  build.rs  lib.rs
crates/db/migrations/: 20240829133656_session_table.sql  20240830205418_message_table.sql
crates/db/queries/: messages.sql  sessions.sql
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
crates/server/src/extractors/: mod.rs  validate_json.rs
crates/server/src/middleware/: mod.rs  protected_routes.rs
crates/server/src/routes/: auth.rs  ping.rs
crates/server/src/utilities/: jwt.rs  mod.rs  validations.rs
crates/server/src/websocket/: event.rs  mod.rs
crates/server/src/websocket/handlers/: message.rs
