[package]
name = "db"
version = "0.0.1"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
tokio-postgres = { version = "0.7.11", features = [
    "with-time-0_3",
    "with-serde_json-1",
] }
cornucopia_async = "0.6.0"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
futures = "0.3.30"
postgres-types = { version = "0.2.7", features = ["derive"] }
time = { version = "0.3.36", default-features = false, features = [
    "formatting",
    "serde",
] }
